--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
